Fix scroll on narrow screens (#8787)

--- a/theme/soundeffecteditor.less
+++ b/theme/soundeffecteditor.less
@@ -29,7 +29,6 @@
 
 .sound-effect-editor {
     width: 100%;
-    height: 100%;
     background-color: @white;
     display: flex;
     flex-direction: column;
